change jdk to jre

--- a/java/17j9/Dockerfile
+++ b/java/17j9/Dockerfile
@@ -20,7 +20,7 @@
 # SOFTWARE.
 #
 
-FROM        --platform=$TARGETOS/$TARGETARCH ibm-semeru-runtimes:open-17-jdk
+FROM        --platform=$TARGETOS/$TARGETARCH ibm-semeru-runtimes:open-17-jre
 
 LABEL       author="Matthew Penner" maintainer="matthew@pterodactyl.io"
 
