schedule image builds

--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -1,6 +1,13 @@
 name: build java
 on:
   workflow_dispatch:
+  schedule:
+    - cron: "0 0 * * 1"
+  push:
+    branches:
+      - master
+    paths:
+      - java/**
 jobs:
   push:
     name: "yolks:java_${{ matrix.tag }}"
