--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -32,4 +32,4 @@ jobs:
           platforms: linux/amd64
           push: true
           tags: |
-            ghcr.io/anglergamesde/yolks:java_${{ matrix.tag }}
+            ghcr.io/strilonnet/yolks:java_${{ matrix.tag }}
