some changes to our images
- remove java 8 and java 17
- rename java_18j9 to java:latestj9
- add non-openj9 build of java 18 (eclipse temurin)

--- a/java/latest/Dockerfile
+++ b/java/latest/Dockerfile
@@ -20,11 +20,11 @@
 # SOFTWARE.
 #
 
-FROM        --platform=$TARGETOS/$TARGETARCH ibm-semeru-runtimes:open-17-jre
+FROM        --platform=$TARGETOS/$TARGETARCH eclipse-temurin:18-jre-alpine
 
 LABEL       author="Matthew Penner" maintainer="matthew@pterodactyl.io"
 
-LABEL       org.opencontainers.image.source="https://github.com/AnglergamesDE/docker-images"
+LABEL       org.opencontainers.image.source="https://github.com/StrilonNET/docker-images"
 LABEL       org.opencontainers.image.licenses=MIT
 
 RUN 		apt-get update -y \
