--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -11,9 +11,8 @@ jobs:
       fail-fast: false
       matrix:
         tag:
-          - 8j9
-          - 17j9
-          - 18j9
+          - latest
+          - latestj9
     steps:
       - uses: actions/checkout@v2
       - uses: docker/setup-buildx-action@v1
