--- a/java/latestj9/Dockerfile
+++ b/java/latestj9/Dockerfile
@@ -22,7 +22,7 @@
 
 FROM        --platform=$TARGETOS/$TARGETARCH ibm-semeru-runtimes:open-18-jre
 
-LABEL       author="Matthew Penner" maintainer="matthew@pterodactyl.io"
+LABEL       author="jerriidesu" maintainer="jerriidesu@strilon.net"
 
 LABEL       org.opencontainers.image.source="https://github.com/StrilonNET/docker-images"
 LABEL       org.opencontainers.image.licenses=MIT
