--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -2,7 +2,7 @@ name: build java
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 0 * * 1"
+    - cron: "0 0 1 * *"
 jobs:
   push:
     name: "yolks:java_${{ matrix.tag }}"
