--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -13,6 +13,7 @@ jobs:
         tag:
           - latest
           - latestj9
+          - graalvm
     steps:
       - uses: actions/checkout@v2
       - uses: docker/setup-buildx-action@v1
